stderr
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
Hiker.kt:20:16: error: expression 'size' of type 'Int' cannot be invoked as a function. The function 'invoke()' is not found
    return arr.size()
               ^
